--- a/css/News.css
+++ b/css/News.css
@@ -239,3 +239,11 @@ img {vertical-align: middle;}
     background-color: white;
     padding: 10px;
   }
+
+  /* Footer */
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 20px;
+  }
